# clog

./: .bump  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  justfile  library.json  logging_design.md
cmake/: clogConfig.cmake.in
docs/: CHANGELOG.md  README.md  api-reference.md  configuration.md  installation.md  multi-library-projects.md  overview.md  performance.md  platform-support.md  quick-start.md
examples/arduino/: arduino_basic.cpp
examples/callback/: callback_example.cpp
examples/desktop/: CMakeLists.txt  desktop_example.cpp
examples/esp32/: esp32_advanced.cpp
examples/pico/: CMakeLists.txt  pico_example.cpp
include/clog/: config.hpp  log.hpp  platform.hpp
scripts/: benchmark.sh  quick_test.sh  run_tests.sh
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_cmake_platform_config.cpp  test_desktop_integration.cpp  test_embedded_simulation.cpp  test_library_system.cpp  test_simple_integration.cpp
tests/unit/: CMakeLists.txt  test_logger.cpp  test_platform.cpp
